--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -46,4 +46,28 @@ select(pups_df, litter_number, sex, pd_ears)
 
 ## `filter`
 
+Let's get rid of rows
+
+```{r}
+filter(litters_df, gd_of_birth == 20)
+filter(litters_df, group == "Con7")
+
+filter(litters_df, gd0_weight < 23)
+
+filter(litters_df, pups_survive != 4)
+
+filter(litters_df, !(group == "Con7"))
+
+filter(litters_df, group %in% c("Con7", "Con8"))
+
+#且
+filter(litters_df, group == "Con7", gd_of_birth == 20)
+filter(litters_df, group == "Con7" & gd_of_birth == 20)
+
+#或
+filter(litters_df, group == "Con7" | gd_of_birth == 20)
+
+drop_na(litters_df, gd0_weight)
+```
+
 
