--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -67,7 +67,19 @@ filter(litters_df, group == "Con7" & gd_of_birth == 20)
 #或
 filter(litters_df, group == "Con7" | gd_of_birth == 20)
 
+drop_na(litters_df)
 drop_na(litters_df, gd0_weight)
+```
+
+## `mutate`
+
+Let's add or change columns!
+
+```{r}
+mutate(
+  litters_df, 
+  weight_chage = gd18_weight - gd0_weight,
+  group = str_to_lower(group))
 ```
 
 
