--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -82,4 +82,11 @@ mutate(
   group = str_to_lower(group))
 ```
 
+## `arrange`
+
+Let's rearrange the data.
+
+```{r}
+arrange(litters_df, gd_of_birth, gd0_weight)
+```
 
